# os-awesome-filesystem

./: .gitignore  CMakeLists.txt  afs_config.h  afs_protocol.h  afs_server.cpp  afs_test_client.cpp
kernel/: .clang-format  Makefile  afs_client.c  afs_client.h  afs_fs.c  afs_fs.h  afs_inode.c  afs_inode.h  afs_main.c
